Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-3831

ll_readdir() ignores O_NOATIME

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.6.0
    • Lustre 2.5.0
    • 3
    • 9899

      ll_readdir calls touch_atime() which is wrong because it ignores
      whether O_NOATIME is set in f_flags. On RHEL 6, this is moreover unnecessary as vfs_readdir() calls file_accessed() (which does check for O_NOATIME) after invoking f_op->readdir().

            jhammond John Hammond
            jhammond John Hammond
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: