LU-3831 llite: Check O_NOATIME in ll_readdir()

Check for the O_NOATIME flag in ll_readdir() before
calling touch_atime(). Remove the static qualifier for
file_is_noatime() and declare it in llite/llite_internal.h

Signed-off-by: Swapnil Pimpale <spimpale@ddn.com>
Change-Id: Iedd3be29adae80427d71a7eb5a0f8c0d1f1d2924